<resources>
    <string name="app_name">Logistics</string>
    <string name="upload_document">TẢI ẢNH</string>


    <string name="don_gom">Đơn gom:</string>
    <string name="dia_diem">Địa điểm:</string>
    <string name="dia_chi">Địa chỉ:</string>
    <string name="thanh_tien">Thành tiền:</string>
    <string name="nv_ung">NV ứng:</string>
    <string name="uu_tien">Độ ưu tiên:</string>
    <string name="hang_hoa">Hàng hóa:</string>
    <string name="khoi_luong">Khối lượng (Kg):</string>
    <string name="don_gia">Đơn giá:</string>

    <string name="loai_viec">Loại việc:</string>
    <string name="tim_kiem">Tìm kiếm:</string>
    <string name="danh_sach_cv">Danh sách công việc: [Số lượng]</string>


    <string name="da_can">1. Đã cân</string>
    <string name="da_dong_goi">2. Đã đóng gói</string>
    <string name="bao_tai">3. Báo tài</string>
    <string name="nhap_kho">4. Nhập kho</string>
    <string name="da_ban">5. Đã bán</string>

    <string name="truoc_lam_gon">1. Trước làm gọn</string>
    <string name="mat_can">2. Mặt cân</string>
    <string name="sau_lam_gon">3. Sau làm gọn</string>

    <string name="notice_front_id_card">CHỤP/TẢI \n ẢNH MẶT TRƯỚC</string>
    <string name="notice_center_id_card">CHỤP/TẢI \n ẢNH MẶT GIỮA</string>
    <string name="notice_back_id_card">CHỤP/TẢI \n ẢNH MẶT SAU</string>
    <string name="upload_front_id_card_notice">Lưu ý: Đặt ảnh ngay ngắn khi chụp, tránh cung cấp hình ảnh bị chói lóa, mất góc.</string>
</resources>