<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_dialog"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingBottom="@dimen/vertical_margin">


    <ImageView
        android:id="@+id/imgClose"
        android:layout_marginHorizontal="5dp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_close_dialog"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:text="Thêm Ảnh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font20_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"/>

    <View
        android:id="@+id/lineOne"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="0.9dp"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        android:layout_marginVertical="10dp"
        android:background="@color/color_datroi" />

    <LinearLayout
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lineOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/truoc_lam_gon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.dinhtc.logistics.common.view.UploadDocumentImage
            android:id="@+id/imgFront"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="120dp"
            android:background="@drawable/ripple_bg_upload_image"
            app:actionResId="@string/notice_front_id_card"
            app:iconResId="@drawable/ic_camera" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/mat_can"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.dinhtc.logistics.common.view.UploadDocumentImage
            android:id="@+id/imgCenter"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="120dp"
            android:background="@drawable/ripple_bg_upload_image"
            app:actionResId="@string/notice_center_id_card"
            app:iconResId="@drawable/ic_camera" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/sau_lam_gon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.dinhtc.logistics.common.view.UploadDocumentImage
            android:id="@+id/imgBack"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="120dp"
            android:background="@drawable/ripple_bg_upload_image"
            app:actionResId="@string/notice_back_id_card"
            app:iconResId="@drawable/ic_camera" />


        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:background="@drawable/bg_button_no_strock"
            android:gravity="center"
            android:text="Lưu"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>