<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.dinhtc.logistics.model.LogisticInfoModel" />

        <variable
            name="logisticModelView"
            type="com.dinhtc.logistics.model.LogisticInfoModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/bg_home">

            <TextView
                android:id="@+id/tvTTDH"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="THÔNG TIN ĐƠN HÀNG"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutViewOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_item_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTTDH">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="@dimen/layout_wight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/don_gom"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:text="@{``+logisticModelView.idOrder}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="NGUYEN NGOC HOANG" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.9dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/color_datroi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="@dimen/layout_wight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dia_diem"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:text="@{logisticModelView.locationOrder}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="NGUYEN NGOC HOANG" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.9dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/color_datroi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="@dimen/layout_wight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dia_chi"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:text="@{logisticModelView.locationOrder}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="NGUYEN NGOC HOANG" />

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutViewTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutViewOne">

                <TextView
                    android:id="@+id/btnBanDo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_item_detail"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="15dp"
                    android:text="Bản đồ"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnAnh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_item_detail"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="15dp"
                    android:text="Ảnh"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnHangHoa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_item_detail"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="15dp"
                    android:text="Hàng hóa"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toRightOf="@+id/btnBanDo"
                    app:layout_constraintRight_toLeftOf="@+id/btnAnh"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layoutViewThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_item_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutViewTwo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="@dimen/layout_wight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thanh_tien"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:text="25.000.000 VNĐ"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="NGUYEN NGOC HOANG" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.9dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/color_datroi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="@dimen/layout_wight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nv_ung"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:text="@{logisticModelView.personOrder}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="NGUYEN NGOC HOANG" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.9dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/color_datroi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="@dimen/layout_wight"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/uu_tien"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:text="@{logisticModelView.prioritizeOrder}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="NGUYEN NGOC HOANG" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutViewFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/background_item_shadow"
                android:orientation="vertical"
                android:paddingTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutViewThree">


                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_item_detail"
                    android:padding="10dp"
                    android:text="@string/da_can"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_item_detail"
                    android:padding="10dp"
                    android:text="@string/da_dong_goi"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_item_detail"
                    android:padding="10dp"
                    android:text="@string/bao_tai"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_item_detail"
                    android:padding="10dp"
                    android:text="@string/nhap_kho"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_item_detail"
                    android:padding="10dp"
                    android:text="@string/da_ban"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_btn"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="3dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutViewFour">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_no_strock"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="15dp"
                    android:text="Hủy"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_no_strock"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="15dp"
                    android:text="Lưu"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>