<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTTDH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="THÔNG TIN ĐƠN HÀNG"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/layoutViewOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_item_shadow"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTTDH">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="@dimen/layout_wight"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/loai_viec"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="NGUYEN NGOC HOANG" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.9dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/color_datroi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="@dimen/layout_wight"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dia_diem"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="NGUYEN NGOC HOANG" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.9dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/color_datroi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="@dimen/layout_wight"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dia_chi"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="NGUYEN NGOC HOANG" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>